--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "babelify": "^7.2.0",
     "browserify": "^13.1.1",
     "del": "^2.2.0",
+    "dotenv": "^2.0.0",
     "eslint": "^3.11.1",
     "eslint-plugin-react": "^6.7.1",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-connect": "^5.0.0",
     "gulp-cssnano": "^2.1.1",
+    "gulp-envify": "^1.0.0",
     "gulp-eslint": "^3.0.1",
     "gulp-imagemin": "^3.1.1",
     "gulp-livereload": "^3.8.1",
