--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "dependencies": {
     "babel-polyfill": "^6.2.0",
     "immutable": "^3.8.1",
+    "moment": "^2.17.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.2.1",
