--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
-    "uuid": "^3.0.1"
+    "uuid": "^3.0.1",
+    "whatwg-fetch": "^2.0.2"
   },
   "devDependencies": {
     "babel-core": "^6.2.1",
