--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "babel-polyfill": "^6.2.0",
     "immutable": "^3.8.1",
+    "js-cookie": "^2.1.3",
     "moment": "^2.17.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
