--- a/package.json
+++ b/package.json
@@ -1,8 +1,22 @@
 {
   "name": "wordhub3-web",
   "version": "1.0.0",
+  "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon --watch server-code --watch shared-code --ext js,jsx app.js"
+  },
   "dependencies": {
+    "babel-plugin-transform-es2015-destructuring": "^6.18.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
+    "babel-plugin-transform-es2015-parameters": "^6.18.0",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-polyfill": "^6.2.0",
+    "babel-preset-react": "^6.1.18",
+    "babel-register": "^6.18.0",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.15.2",
+    "express-https-redirect": "^1.0.0",
+    "helmet": "^3.5.0",
     "immutable": "^3.8.1",
     "js-cookie": "^2.1.3",
     "moment": "^2.17.1",
@@ -12,14 +26,13 @@
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
+    "transit-immutable-js": "^0.7.0",
+    "transit-js": "^0.8.846",
     "uuid": "^3.0.1",
     "whatwg-fetch": "^2.0.2"
   },
   "devDependencies": {
-    "babel-core": "^6.2.1",
-    "babel-plugin-transform-object-rest-spread": "^6.3.13",
     "babel-preset-es2015": "^6.1.18",
-    "babel-preset-react": "^6.1.18",
     "babelify": "^7.2.0",
     "browserify": "^13.1.1",
     "del": "^2.2.0",
@@ -40,7 +53,9 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^2.0.0",
     "gulp-watch": "^4.3.5",
+    "livereload": "^0.6.0",
     "node-notifier": "^4.3.1",
+    "nodemon": "^1.11.0",
     "run-sequence": "^1.1.5",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
