--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "dev": "nodemon --watch server-code --watch shared-code --ext js,jsx app.js"
   },
   "dependencies": {
+    "babel-plugin-transform-async-to-generator": "^6.22.0",
     "babel-plugin-transform-es2015-destructuring": "^6.18.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
     "babel-plugin-transform-es2015-parameters": "^6.18.0",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.2.0",
     "babel-preset-react": "^6.1.18",
     "babel-register": "^6.18.0",
     "cookie-parser": "^1.4.3",
+    "ejs": "^2.5.6",
     "express": "^4.15.2",
     "express-https-redirect": "^1.0.0",
     "helmet": "^3.5.0",
@@ -32,6 +35,7 @@
     "whatwg-fetch": "^2.0.2"
   },
   "devDependencies": {
+    "babel-eslint": "^7.2.1",
     "babel-preset-es2015": "^6.1.18",
     "babelify": "^7.2.0",
     "browserify": "^13.1.1",
