Add elastic beanstalk files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 /dist
 /npm-debug.log
 .env
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
