--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cookie-parser": "^1.4.3",
     "dotenv": "^2.0.0",
     "ejs": "^2.5.6",
+    "escape-string-regexp": "^1.0.5",
     "express": "^4.15.2",
     "express-https-redirect": "^1.0.0",
     "helmet": "^3.5.0",
