--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -39,7 +39,7 @@ rules:
   no-unreachable: 2
   no-var: 2
   object-curly-spacing: [2, never]
-  prefer-arrow-callback: 2
+  # prefer-arrow-callback: 2
   prefer-const: 2
   quotes: [2, single, avoid-escape]
   semi-spacing: 2
