--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "helmet": "^3.5.0",
     "immutable": "^3.8.1",
     "js-cookie": "^2.1.3",
+    "material-ui": "^0.18.0",
     "moment": "^2.17.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
