--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "express": "^4.15.2",
     "express-https-redirect": "^1.0.0",
     "helmet": "^3.5.0",
+    "i18next": "^8.1.0",
+    "i18next-browser-languagedetector": "^1.0.1",
+    "i18next-express-middleware": "^1.0.5",
     "immutable": "^3.8.1",
     "js-cookie": "^2.1.3",
     "material-ui": "^0.18.0",
