--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "i18next-express-middleware": "^1.0.5",
     "immutable": "^3.8.1",
     "js-cookie": "^2.1.3",
+    "loglevel": "^1.4.1",
     "material-ui": "^0.18.0",
     "moment": "^2.17.1",
     "react": "^15.4.1",
