--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "moment": "^2.17.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-helmet": "^5.0.3",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
