--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "loglevel": "^1.4.1",
     "material-ui": "^0.18.0",
     "moment": "^2.17.1",
+    "prop-types": "^15.5.10",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-helmet": "^5.0.3",
