--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-helmet": "^5.0.3",
+    "react-i18next": "^4.1.0",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
