--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "material-ui": "^0.18.0",
     "moment": "^2.17.1",
     "prop-types": "^15.5.10",
+    "raf": "^3.3.2",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-helmet": "^5.0.3",
@@ -46,8 +47,10 @@
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "reselect": "^3.0.0",
+    "scroll-to-element": "^2.0.0",
     "transit-immutable-js": "^0.7.0",
     "transit-js": "^0.8.846",
+    "tween": "^0.9.0",
     "uuid": "^3.0.1",
     "whatwg-fetch": "^2.0.2"
   },
