--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "i18next-browser-languagedetector": "^1.0.1",
     "i18next-express-middleware": "^1.0.5",
     "immutable": "^3.8.1",
+    "isomorphic-fetch": "^2.2.1",
     "js-cookie": "^2.1.3",
     "loglevel": "^1.4.1",
     "material-ui": "^0.18.0",
@@ -51,8 +52,7 @@
     "transit-immutable-js": "^0.7.0",
     "transit-js": "^0.8.846",
     "tween": "^0.9.0",
-    "uuid": "^3.0.1",
-    "whatwg-fetch": "^2.0.2"
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.1",
